--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ navigationRuntimeAndroid = "2.9.0-alpha09"
 hiltWork = "1.2.0"
 foundationLayoutAndroid = "1.7.4"
 transportRuntime = "3.1.9"
+window = "1.3.0"
 
 
 [libraries]
@@ -33,6 +34,7 @@ androidx-navigation-runtime-android = { group = "androidx.navigation", name = "n
 androidx-hilt-work = { group = "androidx.hilt", name = "hilt-work", version.ref = "hiltWork" }
 androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
 transport-runtime = { group = "com.google.android.datatransport", name = "transport-runtime", version.ref = "transportRuntime" }
+androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 
 
 [plugins]
