--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,12 +24,47 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.NamibiaHockey">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <intent-filter android:autoVerify="true">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="https"
+                    android:host="namibiahockey.com"
+                    android:pathPattern="/events/*" />
+                <data
+                    android:scheme="https"
+                    android:host="namibiahockey.com"
+                    android:pathPattern="/news/*" />
+                <data
+                    android:scheme="https"
+                    android:host="namibiahockey.com"
+                    android:pathPattern="/teams/*" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="namibiahockey"
+                    android:host="events" />
+                <data
+                    android:scheme="namibiahockey"
+                    android:host="news" />
+                <data
+                    android:scheme="namibiahockey"
+                    android:host="teams" />
+            </intent-filter>
+
+
         </activity>
 
         <!-- Firebase Messaging Service -->
