--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ transportRuntime = "3.1.9"
 window = "1.3.0"
 datastoreCoreAndroid = "1.1.6"
 datastorePreferencesCoreJvm = "1.1.6"
+transportBackendCct = "3.1.9"
 
 
 [libraries]
@@ -39,6 +40,7 @@ transport-runtime = { group = "com.google.android.datatransport", name = "transp
 androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 androidx-datastore-preferences-core-jvm = { group = "androidx.datastore", name = "datastore-preferences-core-jvm", version.ref = "datastorePreferencesCoreJvm" }
+transport-backend-cct = { group = "com.google.android.datatransport", name = "transport-backend-cct", version.ref = "transportBackendCct" }
 
 
 [plugins]
