--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ window = "1.3.0"
 datastoreCoreAndroid = "1.1.6"
 datastorePreferencesCoreJvm = "1.1.6"
 transportBackendCct = "3.1.9"
+runtimeSavedInstanceState = "1.0.0-alpha11"
 
 
 [libraries]
@@ -41,6 +42,7 @@ androidx-window = { group = "androidx.window", name = "window", version.ref = "w
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 androidx-datastore-preferences-core-jvm = { group = "androidx.datastore", name = "datastore-preferences-core-jvm", version.ref = "datastorePreferencesCoreJvm" }
 transport-backend-cct = { group = "com.google.android.datatransport", name = "transport-backend-cct", version.ref = "transportBackendCct" }
+androidx-runtime-saved-instance-state = { group = "androidx.compose.runtime", name = "runtime-saved-instance-state", version.ref = "runtimeSavedInstanceState" }
 
 
 [plugins]
